k8s-ingress/k8s/blue-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blue-pod
  labels:
    app: blue-pod
spec:
  containers:
  - name: blue-container
    image: ryanckhung/ryannginx_blue
