k8s-ingress/k8s/green-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: green-pod
  labels:
    app: green-pod
spec:
  containers:
  - name: green-container
    image: ryanckhung/ryannginx_green
