k8s-ingress/k8s/blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
spec:
  selector:
    app: blue-pod
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 80
