k8s-ingress/k8s/green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  selector:
    app: green-pod
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 80
