k8s-ingress/k8s/red-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-svc
spec:
  selector:
    app: red-pod
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 80
