k8s-ingress/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /red
        pathType: Prefix
        backend:
          service:
           name: red-svc
           port:
            number: 8088
  - http:
      paths:
      - path: /green
        pathType: Prefix
        backend:
          service:
           name: green-svc
           port:
            number: 8088
  - http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
           name: blue-svc
           port:
            number: 8088
